--- a/craft/templates/partials/_header.html
+++ b/craft/templates/partials/_header.html
@@ -15,16 +15,11 @@
                   {{ each.getLink() }}
                 </li>
               {% endnav %}
-              <li class="nav__list">
-                <a href="#contact-box">
-                  Contact
-                </a>
-              </li>
           </ul>
       </nav>
     </div>
     <div class="header__social" role="social media">
-      {% include 'partials/_social.html' %}
+      {% include 'partials/_social-footer.html' %}
     </div>
   </div>
 </header>
