--- a/craft/templates/partials/_social-footer.html
+++ b/craft/templates/partials/_social-footer.html
@@ -2,7 +2,7 @@
   {% for each in companySocialLinks.socialList %}
     <a href="{{each.socialLink}}">
       <li class="social__item fa-stack fa-lg">
-        <i class="fa fa-stack-2x fa-stop is__text--c-gray"></i>
+        <i class="fa fa-stack-2x fa-stop is__text--c-gray social__bg"></i>
         <i class="fa fa-stack-1x fa-{{each.socialName|lower}} is__text--c-white"></i>
       </li>
     </a>
