--- a/resources/sass/base/is/_is__text.sass
+++ b/resources/sass/base/is/_is__text.sass
@@ -35,8 +35,8 @@
 .is__text--size--giga
   font-size: 33pt
 
-//.is__text--size--mega
-//  font-size: 1.61rem
+.is__text--size--mega
+  font-size: 2.5rem
 
 //.is__text--size--kilo
 //  font-size: 1.2rem
