--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -37,6 +37,7 @@
 @import "ui/onLoad"
 @import "ui/front-gallery"
 @import "ui/home"
+@import "ui/contact"
 
 //PLUGINS
 @import "plugins/traffic-light"
