--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -23,7 +23,7 @@
               <img class="aside__image" src="{{ panel.image[0].url }}" alt="">
               <h2 class="aside__heading">{{ panel.heading }}</h2>
             {% else %}
-              <h2 class="aside__heading">{{ panel.heading }}</h2>
+              <h2 class="aside__heading no-margin">{{ panel.heading }}</h2>
               <img class="aside__image" src="{{ panel.image[0].url }}" alt="">
             {% endif %}
             <p class="aside__caption">{{panel.caption}}</p>
