--- a/resources/sass/style.css
+++ b/resources/sass/style.css
@@ -607,7 +607,7 @@ label[role="menu-toggle"] i {
   border-color: #ef4036; }
 
 /* line 5, base/is/_is__colors.sass */
-.is__text--c-white, h1, .component__contact input[type='submit'], .component__panel, .panel--small, .tour__panel, .mDetail__panel, .home__aside, .main__aside .storeline__panel, .merch__panel, .home__body, .panelGoods__symbol i, .main__article .goods__symbol i, .panelGoods__heading, .main__article .goods__heading, #header__toggle:checked + label i, .main__article .article__copy, .storeline__list .list__heading, .merchitem__name, .merchitem__price, .mDetail__price, .mDetail__description, .mSearch__filter-title, .mSearch__filter-list li, .home__aside .aside__button {
+.is__text--c-white, h1, .component__contact input[type='submit'], .component__panel, .panel--small, .tour__panel, .mDetail__panel, .home__aside, .main__aside .storeline__panel, .merch__panel, .home__body, .panelGoods__symbol i, .main__article .goods__symbol i, .panelGoods__heading, .main__article .goods__heading, #header__toggle:checked + label i, .main__article .article__copy, .storeline__list .list__heading, .merchitem__name, .merchitem__price, .mDetail__price, .mDetail__description, .mSearch__filter-title, .mSearch__filter-list li, .home__aside .aside__button, .contact__form h2 {
   color: white; }
 
 /* line 9, base/is/_is__colors.sass */
@@ -2123,7 +2123,7 @@ body {
       display: block;
       margin-right: 2.35765%;
       width: 23.23176%;
-      margin-left: 0%; }
+      padding: 1rem; }
       /* line 40, neat/grid/_span-columns.scss */
       .home__aside:last-child {
         margin-right: 0; } }
@@ -2138,7 +2138,7 @@ body {
   /* line 23, bourbon/addons/_clearfix.scss */
   .home__aside:after {
     clear: both; }
-  /* line 40, ui/_home.sass */
+  /* line 41, ui/_home.sass */
   .home__aside .aside__box {
     float: left;
     display: block;
@@ -2149,7 +2149,7 @@ body {
     .home__aside .aside__box:last-child {
       margin-right: 0; }
     @media screen and (min-width: 500px) {
-      /* line 40, ui/_home.sass */
+      /* line 41, ui/_home.sass */
       .home__aside .aside__box {
         float: left;
         display: block;
@@ -2161,7 +2161,7 @@ body {
         .home__aside .aside__box:last-child {
           margin-right: 0; } }
     @media screen and (min-width: 768px) {
-      /* line 40, ui/_home.sass */
+      /* line 41, ui/_home.sass */
       .home__aside .aside__box {
         float: left;
         display: block;
@@ -2172,23 +2172,30 @@ body {
         /* line 40, neat/grid/_span-columns.scss */
         .home__aside .aside__box:last-child {
           margin-right: 0; } }
-  /* line 52, ui/_home.sass */
+  /* line 53, ui/_home.sass */
   .home__aside .aside__image {
     max-width: 100%; }
-  /* line 55, ui/_home.sass */
+  /* line 56, ui/_home.sass */
   .home__aside .aside__heading {
     font-size: 1.8rem; }
-  /* line 58, ui/_home.sass */
+    /* line 59, ui/_home.sass */
+    .home__aside .aside__heading.no-margin {
+      margin-top: 0; }
+  /* line 62, ui/_home.sass */
   .home__aside .aside__caption {
     margin: 0;
     line-height: 1.41em; }
-  /* line 64, ui/_home.sass */
+  /* line 68, ui/_home.sass */
   .home__aside .aside__button {
     padding: 0.4rem 1rem;
     position: absolute;
     bottom: 0; }
 
-/* line 3, ui/_contact.sass */
+/* line 1, ui/_contact.sass */
+.contact__box {
+  padding-top: 2.5rem; }
+
+/* line 4, ui/_contact.sass */
 .contact__info {
   float: left;
   display: block;
@@ -2198,17 +2205,7 @@ body {
   .contact__info:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 3, ui/_contact.sass */
-    .contact__info {
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 48.82117%; }
-      /* line 40, neat/grid/_span-columns.scss */
-      .contact__info:last-child {
-        margin-right: 0; } }
-  @media screen and (min-width: 900px) {
-    /* line 3, ui/_contact.sass */
+    /* line 4, ui/_contact.sass */
     .contact__info {
       float: left;
       display: block;
@@ -2218,9 +2215,38 @@ body {
       .contact__info:last-child {
         margin-right: 0; } }
 
-/* line 11, ui/_contact.sass */
+/* line 10, ui/_contact.sass */
 .contact__item i {
   padding-right: 1rem; }
+
+/* line 13, ui/_contact.sass */
+.contact__form {
+  float: left;
+  display: block;
+  margin-right: 4.82916%;
+  width: 100%; }
+  /* line 40, neat/grid/_span-columns.scss */
+  .contact__form:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 768px) {
+    /* line 13, ui/_contact.sass */
+    .contact__form {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 48.82117%;
+      margin-right: 0;
+      padding-left: 2rem; }
+      /* line 40, neat/grid/_span-columns.scss */
+      .contact__form:last-child {
+        margin-right: 0; } }
+
+/* line 25, ui/_contact.sass */
+.contact__map {
+  height: 15rem; }
+  /* line 27, ui/_contact.sass */
+  .contact__map .smartmap-mapcanvas {
+    height: 15rem; }
 
 /* line 11, plugins/traffic-light.scss */
 .traffic-light {
