--- a/resources/sass/ui/_home.sass
+++ b/resources/sass/ui/_home.sass
@@ -2,6 +2,9 @@
   @extend .is__background--c-black
 .home__box
   +oc
+  +media($mobileish)
+    padding: 0
+
 %home__items--height
   +media($tabletopish)
     height: 40rem
@@ -11,7 +14,7 @@
 .home__body-box
   +span-columns(6)
   +media($tabletopish)
-    +span-columns(6)
+    +span-columns(6 of 12)
 .home__body
   @extend .component__panel
   @extend %home__items--height
@@ -22,26 +25,39 @@
 
 .home__aside
   @extend %home__items--height
-  +span-columns(4)
-  +shift(1)
-  +media($tabletish)
-    +span-columns(3)
-    +shift(2)
+  +span-columns(6)
   +media($tabletopish)
-    +span-columns(3)
-    +shift(0)
+    +span-columns(3 of 12)
+    padding: 1rem
   @extend .panel--small
 
   +media($mobileish)
     padding-bottom: 5.2rem
 
   position: relative
+  +row
 
+
+  .aside__box
+    +span-columns(4)
+    +shift(1)
+    @extend .is__text--centered
+    +media($tabletish)
+      +span-columns(4)
+      text-align: left
+      padding: 2rem 0 0 0
+    +media($tabletopish)
+      +span-columns(12)
+      +shift(0)
+      padding: inherit
   .aside__image
-    width: 100%
+    max-width: 100%
 
   .aside__heading
     font-size: 1.8rem
+
+    &.no-margin
+      margin-top: 0
 
   .aside__caption
     @extend .is__text--size--milli
