--- a/craft/templates/_layout--home.html
+++ b/craft/templates/_layout--home.html
@@ -11,6 +11,9 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css"
       href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+
+      <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+
         <link rel="stylesheet" href="{{ craft.config.environmentVariables.siteUrl }}/resources/style-compiled.css">
 
     </head>
