--- a/craft/templates/_layout--structure.html
+++ b/craft/templates/_layout--structure.html
@@ -9,7 +9,11 @@
         <title>{{ siteName }}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+
+        <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+
         {% includeCssResource 'sass/style-compiled.css' %}
+
 
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
