--- a/craft/templates/partials/_header.html
+++ b/craft/templates/partials/_header.html
@@ -10,10 +10,25 @@
       </label>
       <nav class="nav__box" role="menu">
           <ul class="nav__menu">
-             {% nav each in theMenus.mainMenu %}
+            {% set pages = craft.entries.section('mainMenu') %}
+             {% nav each in pages %}
+              {% if each.depth == 1%}
                 <li class="nav__list">
-                  {{ each.getLink() }}
+                  <a href="{{each.linkedPage[0].url}}">{{ each.title }}</a>
+
+                   {% if each.children() %}
+                    <ul class="nav__submenu">
+                      {% for child in each.getDescendants(1) %}
+                       <li class="nav__sublist">
+                       <a href="{{child.url}}">
+                        {{child.title}}</a></li>
+                      {% endfor %}
+                    </ul>
+                  {% endif %}
+
+
                 </li>
+               {% endif%}
               {% endnav %}
           </ul>
       </nav>
