--- a/resources/style-compiled.css
+++ b/resources/style-compiled.css
@@ -720,7 +720,7 @@ label[role="menu-toggle"] i {
   font-size: 1.2rem; }
 
 /* line 53, base/is/_is__text.sass */
-.is__text--unbulleted, .is__list--unformatted, .storeline__list, .merch__collection .collection__list, .nav__list, .header__social li, .footer__menu, .footer__services, .footer__hours, .footer__location, .footer__legal, .mSearch__filter-list {
+.is__text--unbulleted, .is__list--unformatted, .storeline__list, .merch__collection .collection__list, .nav__list, .nav__submenu, .header__social li, .footer__menu, .footer__services, .footer__hours, .footer__location, .footer__legal, .mSearch__filter-list {
   list-style-type: none; }
 
 /* line 12, base/is/_is__this.sass */
@@ -749,11 +749,11 @@ label[role="menu-toggle"] i {
   border-bottom-style: solid; }
 
 /* line 5, base/is/_is__colors.sass */
-.is__text--c-red, .nav__list a:hover, .info__social .social__item i:first-child:hover, .social__item:hover .social__bg, .merchitem__image:hover:before, .merch__collection .collection__item:before, .mSearch__title-box {
+.is__text--c-red, .nav__list:hover, .info__social .social__item i:first-child:hover, .social__item:hover .social__bg, .merchitem__image:hover:before, .merch__collection .collection__item:before, .mSearch__title-box {
   color: #ef4036; }
 
 /* line 9, base/is/_is__colors.sass */
-.is__background--c-red, .component__contact input[type='submit'], .component__panel, .panel--small, .tour__panel, .mDetail__panel, .home__aside, .main__aside .storeline__panel, .merch__panel, .home__body, .panelGoods__symbol, .main__article .goods__symbol, .mSearch__filter-box, .block__frontgallery .owl-controls .owl-page.active span {
+.is__background--c-red, .component__contact input[type='submit'], .component__panel, .panel--small, .tour__panel, .mDetail__panel, .home__aside, .main__aside .storeline__panel, .merch__panel, .home__body, .panelGoods__symbol, .main__article .goods__symbol, .nav__submenu .nav__sublist, .mSearch__filter-box, .block__frontgallery .owl-controls .owl-page.active span {
   background: #ef4036; }
 
 /* line 12, base/is/_is__colors.sass */
@@ -761,7 +761,7 @@ label[role="menu-toggle"] i {
   border-color: #ef4036; }
 
 /* line 5, base/is/_is__colors.sass */
-.is__text--c-white, h1, .component__contact input[type='submit'], .component__panel, .panel--small, .tour__panel, .mDetail__panel, .home__aside, .main__aside .storeline__panel, .merch__panel, .home__body, .panelGoods__symbol i, .main__article .goods__symbol i, .panelGoods__heading, .main__article .goods__heading, #header__toggle:checked + label i, .main__article .article__copy, .storeline__list .list__heading, .merchitem__name, .merchitem__price, .mDetail__price, .mDetail__description, .mSearch__filter-title, .mSearch__filter-list li, .home__aside .aside__button, .contact__form h2 {
+.is__text--c-white, h1, .component__contact input[type='submit'], .component__panel, .panel--small, .tour__panel, .mDetail__panel, .home__aside, .main__aside .storeline__panel, .merch__panel, .home__body, .panelGoods__symbol i, .main__article .goods__symbol i, .panelGoods__heading, .main__article .goods__heading, #header__toggle:checked + label i, .nav__submenu .nav__sublist, .main__article .article__copy, .storeline__list .list__heading, .merchitem__name, .merchitem__price, .mDetail__price, .mDetail__description, .mSearch__filter-title, .mSearch__filter-list li, .home__aside .aside__button, .contact__form h2 {
   color: white; }
 
 /* line 9, base/is/_is__colors.sass */
@@ -781,7 +781,7 @@ label[role="menu-toggle"] i {
   background: #8c8c8c; }
 
 /* line 12, base/is/_is__colors.sass */
-.is__border--c-gray, .nav__list, .merchitem__info {
+.is__border--c-gray, .merchitem__info {
   border-color: #8c8c8c; }
 
 /* line 5, base/is/_is__colors.sass */
@@ -793,7 +793,7 @@ label[role="menu-toggle"] i {
   background: #999999; }
 
 /* line 12, base/is/_is__colors.sass */
-.is__border--c-gray-light, label[role="menu-toggle"] i, .nav__list a {
+.is__border--c-gray-light, label[role="menu-toggle"] i, .nav__list {
   border-color: #999999; }
 
 /* line 5, base/is/_is__colors.sass */
@@ -845,7 +845,7 @@ label[role="menu-toggle"] i {
   border-color: #444444; }
 
 /* line 5, base/is/_is__colors.sass */
-.is__text--c-black, html, body {
+.is__text--c-black, html, body, .nav__submenu .nav__sublist:hover {
   color: #0d0d0d; }
 
 /* line 9, base/is/_is__colors.sass */
@@ -1076,21 +1076,26 @@ a {
   -webkit-background-size: contain;
   background-size: contain; }
 
+/* line 1, ui/_header.sass */
+header {
+  position: relative;
+  z-index: 1000; }
+
 @media screen and (min-width: 768px) {
-  /* line 6, ui/_header.sass */
+  /* line 8, ui/_header.sass */
   .header__block, .nav__menu {
     height: 7.5rem; } }
 @media screen and (min-width: 900px) {
-  /* line 6, ui/_header.sass */
+  /* line 8, ui/_header.sass */
   .header__block, .nav__menu {
     height: 15rem; } }
 
 @media screen and (min-width: 900px) {
-  /* line 13, ui/_header.sass */
+  /* line 15, ui/_header.sass */
   .header__block {
     position: relative; } }
 
-/* line 24, ui/_header.sass */
+/* line 26, ui/_header.sass */
 .header__logo-box {
   float: left;
   display: block;
@@ -1102,7 +1107,7 @@ a {
   .header__logo-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 24, ui/_header.sass */
+    /* line 26, ui/_header.sass */
     .header__logo-box {
       float: left;
       display: block;
@@ -1113,7 +1118,7 @@ a {
       .header__logo-box:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 900px) {
-    /* line 24, ui/_header.sass */
+    /* line 26, ui/_header.sass */
     .header__logo-box {
       float: left;
       display: block;
@@ -1123,12 +1128,12 @@ a {
       .header__logo-box:last-child {
         margin-right: 0; } }
 
-/* line 38, ui/_header.sass */
+/* line 40, ui/_header.sass */
 .header__logo {
   width: 6rem;
   height: 6rem; }
   @media screen and (min-width: 768px) {
-    /* line 38, ui/_header.sass */
+    /* line 40, ui/_header.sass */
     .header__logo {
       width: 9rem;
       height: 9rem;
@@ -1137,7 +1142,7 @@ a {
       transform: translateY(1.5rem);
       margin: 0; } }
   @media screen and (min-width: 900px) {
-    /* line 38, ui/_header.sass */
+    /* line 40, ui/_header.sass */
     .header__logo {
       width: 15rem;
       height: 15rem;
@@ -1145,7 +1150,7 @@ a {
       -ms-transform: translateY(2.5rem);
       transform: translateY(2.5rem); } }
 
-/* line 58, ui/_header.sass */
+/* line 60, ui/_header.sass */
 .header__nav-box {
   float: left;
   display: block;
@@ -1156,7 +1161,7 @@ a {
   .header__nav-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 58, ui/_header.sass */
+    /* line 60, ui/_header.sass */
     .header__nav-box {
       float: left;
       display: block;
@@ -1166,7 +1171,7 @@ a {
       .header__nav-box:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 900px) {
-    /* line 58, ui/_header.sass */
+    /* line 60, ui/_header.sass */
     .header__nav-box {
       float: left;
       display: block;
@@ -1177,44 +1182,44 @@ a {
       .header__nav-box:last-child {
         margin-right: 0; } }
 
-/* line 72, ui/_header.sass */
+/* line 74, ui/_header.sass */
 #header__toggle {
   display: none; }
 
 @media screen and (min-width: 768px) {
-  /* line 76, ui/_header.sass */
+  /* line 78, ui/_header.sass */
   label[role="menu-toggle"] {
     display: none; } }
-/* line 82, ui/_header.sass */
+/* line 84, ui/_header.sass */
 label[role="menu-toggle"] i {
   padding: 0.8rem 1rem;
   border-width: 0.2rem;
   border-style: solid; }
 
-/* line 95, ui/_header.sass */
+/* line 97, ui/_header.sass */
 .nav__box {
   display: none; }
   @media screen and (min-width: 0px) and (max-width: 767px) {
-    /* line 95, ui/_header.sass */
+    /* line 97, ui/_header.sass */
     .nav__box {
       position: absolute;
       left: 0;
       top: 7rem;
       z-index: 999; } }
   @media screen and (min-width: 768px) {
-    /* line 95, ui/_header.sass */
+    /* line 97, ui/_header.sass */
     .nav__box {
       display: block; } }
 
-/* line 109, ui/_header.sass */
+/* line 111, ui/_header.sass */
 #header__toggle:checked ~ nav[role="menu"] {
   display: block; }
 
-/* line 112, ui/_header.sass */
+/* line 114, ui/_header.sass */
 #header__toggle:checked + label i {
   border-color: transparent; }
 
-/* line 117, ui/_header.sass */
+/* line 119, ui/_header.sass */
 .nav__menu {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1224,17 +1229,17 @@ label[role="menu-toggle"] i {
   -webkit-flex-flow: column wrap;
   -ms-flex-flow: column wrap;
   flex-flow: column wrap;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
   padding: 0; }
   @media screen and (min-width: 768px) {
-    /* line 117, ui/_header.sass */
+    /* line 119, ui/_header.sass */
     .nav__menu {
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
@@ -1242,11 +1247,11 @@ label[role="menu-toggle"] i {
       -ms-flex-direction: row;
       flex-direction: row; } }
   @media screen and (min-width: 900px) {
-    /* line 117, ui/_header.sass */
+    /* line 119, ui/_header.sass */
     .nav__menu {
       padding-top: 5rem; } }
   @media screen and (min-width: 0px) and (max-width: 767px) {
-    /* line 117, ui/_header.sass */
+    /* line 119, ui/_header.sass */
     .nav__menu {
       padding-top: 3rem;
       -webkit-align-content: stretch;
@@ -1259,43 +1264,60 @@ label[role="menu-toggle"] i {
       -ms-flex-direction: column;
       flex-direction: column; } }
 
-/* line 144, ui/_header.sass */
+/* line 146, ui/_header.sass */
 .nav__list {
-  font-size: 2rem; }
+  font-size: 2rem;
+  border-left-width: 0.1rem;
+  border-left-style: solid;
+  padding: 0.5rem 1vw;
+  position: relative; }
   @media screen and (min-width: 0px) and (max-width: 767px) {
-    /* line 144, ui/_header.sass */
+    /* line 146, ui/_header.sass */
     .nav__list {
       padding: 1.5rem 0rem 3rem 4rem;
       height: 6rem;
       width: 100%;
       border-bottom-style: solid;
       border-bottom-width: 1px; }
-      /* line 157, ui/_header.sass */
+      /* line 163, ui/_header.sass */
       .nav__list a {
         border: none !important;
         padding: none !important; }
-      /* line 161, ui/_header.sass */
+      /* line 167, ui/_header.sass */
       .nav__list:last-child {
         -webkit-box-shadow: 0 1rem 0.5rem rgba(0, 0, 0, 0.5);
         box-shadow: 0 1rem 0.5rem rgba(0, 0, 0, 0.5); } }
-  /* line 164, ui/_header.sass */
-  .nav__list a {
-    border-left-width: 0.1rem;
-    border-left-style: solid;
-    padding-left: 1.9vw; }
-    @media screen and (min-width: 900px) {
-      /* line 164, ui/_header.sass */
-      .nav__list a {
-        padding-left: 4.6vw; } }
-  /* line 179, ui/_header.sass */
-  .nav__list:first-child a {
-    border: none; }
+  @media screen and (min-width: 900px) {
+    /* line 146, ui/_header.sass */
+    .nav__list {
+      padding: 0.5rem 2.3vw; } }
+  @media screen and (min-width: 768px) {
+    /* line 182, ui/_header.sass */
+    .nav__list:first-child {
+      border: none; } }
 
-/* line 182, ui/_header.sass */
+/* line 187, ui/_header.sass */
+.nav__submenu {
+  display: none;
+  position: absolute;
+  padding: 0;
+  top: 4.5rem; }
+  /* line 194, ui/_header.sass */
+  .nav__submenu .nav__sublist {
+    padding: 1rem;
+    border-color: #9f1818;
+    border-bottom-style: solid;
+    border-bottom-width: 1px; }
+
+/* line 209, ui/_header.sass */
+.nav__list:hover .nav__submenu {
+  display: block; }
+
+/* line 215, ui/_header.sass */
 .header__social {
   display: none; }
   @media screen and (min-width: 768px) {
-    /* line 182, ui/_header.sass */
+    /* line 215, ui/_header.sass */
     .header__social {
       display: block;
       float: left;
@@ -1305,12 +1327,12 @@ label[role="menu-toggle"] i {
       /* line 40, neat/grid/_span-columns.scss */
       .header__social:last-child {
         margin-right: 0; } }
-  /* line 192, ui/_header.sass */
+  /* line 225, ui/_header.sass */
   .header__social .block__social {
     text-align: right;
     padding-left: 0; }
   @media screen and (min-width: 900px) {
-    /* line 182, ui/_header.sass */
+    /* line 215, ui/_header.sass */
     .header__social {
       position: absolute;
       padding-right: 4.5rem;
