--- a/resources/sass/components/_promo.sass
+++ b/resources/sass/components/_promo.sass
@@ -3,7 +3,7 @@
     text-align: center
 
 .promo__title
-  @extend .is__text--light
+  @extend .is__text--bold
   margin-bottom: 0
 
 .promo__copy
@@ -15,3 +15,5 @@
 .promo__hanging
   @extend .is__text--uppercase
   @extend .is__text--regular
+  @extend .is__text--light
+
