--- a/resources/sass/ui/_home.sass
+++ b/resources/sass/ui/_home.sass
@@ -4,6 +4,10 @@
   +oc
   +media($mobileish)
     padding: 0
+  +media($tabletopish)
+    padding: 0
+  +media($laptopish)
+    padding: inherit
 
 %home__items--height
   +media($tabletopish)
