--- a/resources/sass/style-prefixed.css
+++ b/resources/sass/style-prefixed.css
@@ -508,7 +508,7 @@ label[role="menu-toggle"] i {
   font-weight: 800; }
 
 /* line 4, base/is/_is__text.sass */
-.is__text--bold, h1, .component__contact input[type='submit'], .storeline__list .list__heading, .merchitem__image:hover:before, .mDetail__price {
+.is__text--bold, h1, .component__contact input[type='submit'], .promo__title, .storeline__list .list__heading, .merchitem__image:hover:before, .mDetail__price {
   font-weight: 700; }
 
 /* line 7, base/is/_is__text.sass */
@@ -520,7 +520,7 @@ label[role="menu-toggle"] i {
   font-weight: 400; }
 
 /* line 13, base/is/_is__text.sass */
-.is__text--light, p, h2, h3, blockquote, .component__contact h2, .promo__title, .component__panel, .panel--small, .tour__panel, .mDetail__panel, .home__aside, .main__aside .storeline__panel, .merch__panel, .home__body, .breadcrumbs__title, .main__article .article__heading, .storeline__list .list__item, .merchitem__info, .merchitem__price, .merch__collection .collection__item {
+.is__text--light, p, h2, h3, blockquote, .component__contact h2, .promo__hanging, .component__panel, .panel--small, .tour__panel, .mDetail__panel, .home__aside, .main__aside .storeline__panel, .merch__panel, .home__body, .nav__submenu .nav__sublist, .breadcrumbs__title, .main__article .article__heading, .storeline__list .list__item, .merchitem__info, .merchitem__price, .merch__collection .collection__item {
   font-weight: 300; }
 
 /* line 16, base/is/_is__text.sass */
@@ -533,7 +533,7 @@ label[role="menu-toggle"] i {
   font-style: italic; }
 
 /* line 23, base/is/_is__text.sass */
-.is__text--centered, blockquote, caption, .panelGoods__symbol, .main__article .goods__symbol, .panelGoods__caption, .main__article .goods__caption, .about__image-box, .merchitem__image:hover:before, .home__aside .aside__box {
+.is__text--centered, blockquote, caption, .panelGoods__symbol, .main__article .goods__symbol, .panelGoods__caption, .main__article .goods__caption, .nav__submenu .nav__sublist, .about__image-box, .merchitem__image:hover:before, .home__aside .aside__box {
   text-align: center; }
 
 /* line 26, base/is/_is__text.sass */
@@ -1127,12 +1127,13 @@ label[role="menu-toggle"] i {
       height: 6rem;
       width: 100%;
       border-bottom-style: solid;
-      border-bottom-width: 1px; }
-      /* line 163, ui/_header.sass */
+      border-bottom-width: 1px;
+      border-left: none; }
+      /* line 164, ui/_header.sass */
       .nav__list a {
         border: none !important;
         padding: none !important; }
-      /* line 167, ui/_header.sass */
+      /* line 168, ui/_header.sass */
       .nav__list:last-child {
         -webkit-box-shadow: 0 1rem 0.5rem rgba(0, 0, 0, 0.5);
         box-shadow: 0 1rem 0.5rem rgba(0, 0, 0, 0.5); } }
@@ -1141,32 +1142,32 @@ label[role="menu-toggle"] i {
     .nav__list {
       padding: 0.5rem 2.3vw; } }
   @media screen and (min-width: 768px) {
-    /* line 182, ui/_header.sass */
+    /* line 183, ui/_header.sass */
     .nav__list:first-child {
       border: none; } }
 
-/* line 187, ui/_header.sass */
+/* line 188, ui/_header.sass */
 .nav__submenu {
   display: none;
   position: absolute;
-  padding: 0;
+  padding: 1rem 0 0 0;
   top: 3.5rem; }
-  /* line 194, ui/_header.sass */
+  /* line 195, ui/_header.sass */
   .nav__submenu .nav__sublist {
-    padding: 1rem;
+    padding: 1rem 2rem;
     border-color: #9f1818;
     border-bottom-style: solid;
     border-bottom-width: 1px; }
 
-/* line 209, ui/_header.sass */
+/* line 212, ui/_header.sass */
 .nav__list:hover .nav__submenu {
   display: block; }
 
-/* line 215, ui/_header.sass */
+/* line 218, ui/_header.sass */
 .header__social {
   display: none; }
   @media screen and (min-width: 768px) {
-    /* line 215, ui/_header.sass */
+    /* line 218, ui/_header.sass */
     .header__social {
       display: block;
       float: left;
@@ -1176,12 +1177,12 @@ label[role="menu-toggle"] i {
       /* line 40, neat/grid/_span-columns.scss */
       .header__social:last-child {
         margin-right: 0; } }
-  /* line 225, ui/_header.sass */
+  /* line 228, ui/_header.sass */
   .header__social .block__social {
     text-align: right;
     padding-left: 0; }
   @media screen and (min-width: 900px) {
-    /* line 215, ui/_header.sass */
+    /* line 218, ui/_header.sass */
     .header__social {
       position: absolute;
       padding-right: 4.5rem;
@@ -1195,35 +1196,39 @@ label[role="menu-toggle"] i {
 .breadcrumbs__title {
   margin-top: 1.7em; }
 
+/* line 1, ui/_footer.sass */
+.block__footer {
+  padding-bottom: 2rem; }
+
 @media screen and (min-width: 0px) and (max-width: 767px) {
-  /* line 9, ui/_footer.sass */
+  /* line 10, ui/_footer.sass */
   .footer__menu, .footer__services, .footer__hours, .footer__location, .footer__legal, .info__social ul {
     padding: 0;
     text-align: center; } }
 
-/* line 23, ui/_footer.sass */
+/* line 24, ui/_footer.sass */
 .footer__menu li, .footer__services li {
   padding: 0 0.5rem; }
   @media screen and (min-width: 768px) {
-    /* line 23, ui/_footer.sass */
+    /* line 24, ui/_footer.sass */
     .footer__menu li, .footer__services li {
       display: block;
       padding: 0; } }
 
 @media screen and (min-width: 0px) and (max-width: 767px) {
-  /* line 32, ui/_footer.sass */
+  /* line 33, ui/_footer.sass */
   .footer__menu li, .footer__services li {
     border-left: solid 1px #383838;
     padding: 0 1.4rem; }
-    /* line 36, ui/_footer.sass */
+    /* line 37, ui/_footer.sass */
     .footer__menu li:first-of-type, .footer__services li:first-of-type {
       border: none; } }
 @media screen and (min-width: 0px) {
-  /* line 32, ui/_footer.sass */
+  /* line 33, ui/_footer.sass */
   .footer__menu li, .footer__services li {
     padding: 0 0.5rem; } }
 
-/* line 41, ui/_footer.sass */
+/* line 42, ui/_footer.sass */
 .footer__menu-box, .footer__services-box {
   float: left;
   display: block;
@@ -1233,7 +1238,7 @@ label[role="menu-toggle"] i {
   .footer__menu-box:last-child, .footer__services-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 41, ui/_footer.sass */
+    /* line 42, ui/_footer.sass */
     .footer__menu-box, .footer__services-box {
       float: left;
       display: block;
@@ -1244,18 +1249,18 @@ label[role="menu-toggle"] i {
         margin-right: 0; } }
 
 @media screen and (min-width: 768px) {
-  /* line 46, ui/_footer.sass */
+  /* line 47, ui/_footer.sass */
   .footer__menu, .footer__services {
     border-left-width: 1px;
     border-left-style: solid;
     padding-left: 0.5rem; } }
 
 @media screen and (min-width: 768px) {
-  /* line 57, ui/_footer.sass */
+  /* line 58, ui/_footer.sass */
   .footer__list {
     display: block; } }
 
-/* line 63, ui/_footer.sass */
+/* line 64, ui/_footer.sass */
 .footer__hours-box {
   float: left;
   display: block;
@@ -1265,7 +1270,7 @@ label[role="menu-toggle"] i {
   .footer__hours-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 63, ui/_footer.sass */
+    /* line 64, ui/_footer.sass */
     .footer__hours-box {
       float: left;
       display: block;
@@ -1275,7 +1280,7 @@ label[role="menu-toggle"] i {
       .footer__hours-box:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 900px) {
-    /* line 63, ui/_footer.sass */
+    /* line 64, ui/_footer.sass */
     .footer__hours-box {
       float: left;
       display: block;
@@ -1285,7 +1290,7 @@ label[role="menu-toggle"] i {
       .footer__hours-box:last-child {
         margin-right: 0; } }
 
-/* line 73, ui/_footer.sass */
+/* line 74, ui/_footer.sass */
 .footer__location-box {
   float: left;
   display: block;
@@ -1295,7 +1300,7 @@ label[role="menu-toggle"] i {
   .footer__location-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 73, ui/_footer.sass */
+    /* line 74, ui/_footer.sass */
     .footer__location-box {
       float: left;
       display: block;
@@ -1305,7 +1310,7 @@ label[role="menu-toggle"] i {
       .footer__location-box:last-child {
         margin-right: 0; } }
 
-/* line 82, ui/_footer.sass */
+/* line 83, ui/_footer.sass */
 .footer__info-box {
   float: left;
   display: block;
@@ -1315,7 +1320,7 @@ label[role="menu-toggle"] i {
   .footer__info-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 82, ui/_footer.sass */
+    /* line 83, ui/_footer.sass */
     .footer__info-box {
       float: left;
       display: block;
@@ -1325,7 +1330,7 @@ label[role="menu-toggle"] i {
       .footer__info-box:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 900px) {
-    /* line 82, ui/_footer.sass */
+    /* line 83, ui/_footer.sass */
     .footer__info-box {
       float: left;
       display: block;
@@ -1335,15 +1340,15 @@ label[role="menu-toggle"] i {
       .footer__info-box:last-child {
         margin-right: 0; } }
 
-/* line 90, ui/_footer.sass */
+/* line 91, ui/_footer.sass */
 .footer__info ul {
   padding: 0; }
 
-/* line 97, ui/_footer.sass */
+/* line 98, ui/_footer.sass */
 .legal__item {
   display: block; }
 
-/* line 100, ui/_footer.sass */
+/* line 101, ui/_footer.sass */
 .info__social-box {
   *zoom: 1;
   display: block; }
@@ -1355,7 +1360,7 @@ label[role="menu-toggle"] i {
   .info__social-box:after {
     clear: both; }
 
-/* line 103, ui/_footer.sass */
+/* line 104, ui/_footer.sass */
 .info__social {
   float: left;
   display: block;
@@ -1365,7 +1370,7 @@ label[role="menu-toggle"] i {
   .info__social:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 103, ui/_footer.sass */
+    /* line 104, ui/_footer.sass */
     .info__social {
       float: left;
       display: block;
@@ -1375,7 +1380,7 @@ label[role="menu-toggle"] i {
       .info__social:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 900px) {
-    /* line 103, ui/_footer.sass */
+    /* line 104, ui/_footer.sass */
     .info__social {
       float: left;
       display: block;
@@ -1385,11 +1390,11 @@ label[role="menu-toggle"] i {
       .info__social:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 900px) {
-    /* line 110, ui/_footer.sass */
+    /* line 111, ui/_footer.sass */
     .info__social ul {
       padding-right: 0.5rem; } }
 
-/* line 127, ui/_footer.sass */
+/* line 128, ui/_footer.sass */
 .info__logo-box {
   float: left;
   display: block;
@@ -1399,7 +1404,7 @@ label[role="menu-toggle"] i {
   .info__logo-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 127, ui/_footer.sass */
+    /* line 128, ui/_footer.sass */
     .info__logo-box {
       float: left;
       display: block;
@@ -1409,7 +1414,7 @@ label[role="menu-toggle"] i {
       .info__logo-box:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 900px) {
-    /* line 127, ui/_footer.sass */
+    /* line 128, ui/_footer.sass */
     .info__logo-box {
       float: left;
       display: block;
@@ -1419,24 +1424,29 @@ label[role="menu-toggle"] i {
       .info__logo-box:last-child {
         margin-right: 0; } }
 
-/* line 134, ui/_footer.sass */
+/* line 135, ui/_footer.sass */
 .info__logo {
   height: 8.8rem;
   width: 8.8rem;
   margin: 0 auto; }
   @media screen and (min-width: 768px) {
-    /* line 134, ui/_footer.sass */
+    /* line 135, ui/_footer.sass */
     .info__logo {
       height: 5.5rem;
       width: 5.5rem;
       display: inline-block;
       float: right; } }
   @media screen and (min-width: 900px) {
-    /* line 134, ui/_footer.sass */
+    /* line 135, ui/_footer.sass */
     .info__logo {
       float: left; } }
 
-/* line 7, ui/_aside.sass */
+@media screen and (min-width: 0px) and (max-width: 767px) {
+  /* line 1, ui/_aside.sass */
+  .block__moreinfo {
+    padding-bottom: 3rem; } }
+
+/* line 10, ui/_aside.sass */
 .moreinfo__promo, .moreinfo__tour {
   float: left;
   display: block;
@@ -1447,7 +1457,7 @@ label[role="menu-toggle"] i {
     margin-right: 0; }
 
 @media screen and (min-width: 768px) {
-  /* line 13, ui/_aside.sass */
+  /* line 16, ui/_aside.sass */
   .moreinfo__promo {
     float: left;
     display: block;
@@ -1457,11 +1467,11 @@ label[role="menu-toggle"] i {
     .moreinfo__promo:last-child {
       margin-right: 0; } }
 
-/* line 17, ui/_aside.sass */
+/* line 20, ui/_aside.sass */
 .moreinfo__tour {
   margin-top: 2.5rem; }
   @media screen and (min-width: 768px) {
-    /* line 17, ui/_aside.sass */
+    /* line 20, ui/_aside.sass */
     .moreinfo__tour {
       float: left;
       display: block;
@@ -1471,11 +1481,11 @@ label[role="menu-toggle"] i {
       .moreinfo__tour:last-child {
         margin-right: 0; } }
 
-/* line 22, ui/_aside.sass */
+/* line 25, ui/_aside.sass */
 .tour__box {
   position: relative; }
 
-/* line 25, ui/_aside.sass */
+/* line 28, ui/_aside.sass */
 .tour__panel {
   position: absolute;
   top: 0;
@@ -1486,12 +1496,12 @@ label[role="menu-toggle"] i {
   height: 4.5rem;
   padding: 1.1rem; }
 
-/* line 39, ui/_aside.sass */
+/* line 42, ui/_aside.sass */
 .tour__video {
   width: 100%; }
 
 @media screen and (min-width: 0px) {
-  /* line 43, ui/_aside.sass */
+  /* line 46, ui/_aside.sass */
   .moreinfo__contact {
     float: left;
     display: block;
@@ -1501,7 +1511,7 @@ label[role="menu-toggle"] i {
     .moreinfo__contact:last-child {
       margin-right: 0; } }
 @media screen and (min-width: 500px) {
-  /* line 43, ui/_aside.sass */
+  /* line 46, ui/_aside.sass */
   .moreinfo__contact {
     float: left;
     display: block;
@@ -1512,7 +1522,7 @@ label[role="menu-toggle"] i {
     .moreinfo__contact:last-child {
       margin-right: 0; } }
 @media screen and (min-width: 768px) {
-  /* line 43, ui/_aside.sass */
+  /* line 46, ui/_aside.sass */
   .moreinfo__contact {
     float: left;
     display: block;
@@ -2113,17 +2123,25 @@ body {
   /* line 3, ui/_home.sass */
   .home__box {
     padding: 0; } }
+@media screen and (min-width: 768px) {
+  /* line 3, ui/_home.sass */
+  .home__box {
+    padding: 0; } }
+@media screen and (min-width: 900px) {
+  /* line 3, ui/_home.sass */
+  .home__box {
+    padding: inherit; } }
 
 @media screen and (min-width: 768px) {
-  /* line 8, ui/_home.sass */
+  /* line 12, ui/_home.sass */
   .home__body, .home__aside {
     height: 40rem; } }
 @media screen and (min-width: 900px) {
-  /* line 8, ui/_home.sass */
+  /* line 12, ui/_home.sass */
   .home__body, .home__aside {
     height: 30rem; } }
 
-/* line 14, ui/_home.sass */
+/* line 18, ui/_home.sass */
 .home__body-box {
   float: left;
   display: block;
@@ -2133,7 +2151,7 @@ body {
   .home__body-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 14, ui/_home.sass */
+    /* line 18, ui/_home.sass */
     .home__body-box {
       float: left;
       display: block;
@@ -2143,11 +2161,11 @@ body {
       .home__body-box:last-child {
         margin-right: 0; } }
 
-/* line 21, ui/_home.sass */
+/* line 25, ui/_home.sass */
 .home__body .body__title {
   margin-top: 0rem; }
 
-/* line 26, ui/_home.sass */
+/* line 30, ui/_home.sass */
 .home__aside {
   float: left;
   display: block;
@@ -2160,7 +2178,7 @@ body {
   .home__aside:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 26, ui/_home.sass */
+    /* line 30, ui/_home.sass */
     .home__aside {
       float: left;
       display: block;
@@ -2171,7 +2189,7 @@ body {
       .home__aside:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 0px) and (max-width: 767px) {
-    /* line 26, ui/_home.sass */
+    /* line 30, ui/_home.sass */
     .home__aside {
       padding-bottom: 5.2rem; } }
   /* line 17, bourbon/addons/_clearfix.scss */
@@ -2181,7 +2199,7 @@ body {
   /* line 23, bourbon/addons/_clearfix.scss */
   .home__aside:after {
     clear: both; }
-  /* line 41, ui/_home.sass */
+  /* line 45, ui/_home.sass */
   .home__aside .aside__box {
     float: left;
     display: block;
@@ -2192,7 +2210,7 @@ body {
     .home__aside .aside__box:last-child {
       margin-right: 0; }
     @media screen and (min-width: 500px) {
-      /* line 41, ui/_home.sass */
+      /* line 45, ui/_home.sass */
       .home__aside .aside__box {
         float: left;
         display: block;
@@ -2204,7 +2222,7 @@ body {
         .home__aside .aside__box:last-child {
           margin-right: 0; } }
     @media screen and (min-width: 768px) {
-      /* line 41, ui/_home.sass */
+      /* line 45, ui/_home.sass */
       .home__aside .aside__box {
         float: left;
         display: block;
@@ -2215,20 +2233,20 @@ body {
         /* line 40, neat/grid/_span-columns.scss */
         .home__aside .aside__box:last-child {
           margin-right: 0; } }
-  /* line 53, ui/_home.sass */
+  /* line 57, ui/_home.sass */
   .home__aside .aside__image {
     max-width: 100%; }
-  /* line 56, ui/_home.sass */
+  /* line 60, ui/_home.sass */
   .home__aside .aside__heading {
     font-size: 1.8rem; }
-    /* line 59, ui/_home.sass */
+    /* line 63, ui/_home.sass */
     .home__aside .aside__heading.no-margin {
       margin-top: 0; }
-  /* line 62, ui/_home.sass */
+  /* line 66, ui/_home.sass */
   .home__aside .aside__caption {
     margin: 0;
     line-height: 1.41em; }
-  /* line 68, ui/_home.sass */
+  /* line 72, ui/_home.sass */
   .home__aside .aside__button {
     padding: 0.4rem 1rem;
     position: absolute;
